--- a/src/app/components/ClientMeme/clientComponent.css
+++ b/src/app/components/ClientMeme/clientComponent.css
@@ -2,16 +2,14 @@
   width: 100%;
   height: 100vh;
   /* background-color: rgb(177, 199, 199); */
-  background-image: url("https://image.slidesdocs.com/responsive-images/background/world-smile-day-smiley-emoji-powerpoint-background_010e67dd9d__960_540.jpg");
-  background-size: 100% 100%;
+background-color: black;  background-size: 100% 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .meme-contant {
-  background-color: rgba(7, 156, 69, 0.842);
-  box-shadow: 0 0 20px white;
+  box-shadow: 0 0 20px pink;
   border-radius: 20px;
   overflow: hidden;
   width: 45%;
@@ -67,7 +65,6 @@
 
 .memeBtn {
   background-color: initial;
-  background-image: linear-gradient(-180deg, #00d775, #00bd68);
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
   color: #ffffff;
